nav logo on mobile fix

--- a/css/index.css
+++ b/css/index.css
@@ -436,6 +436,7 @@ nav {
 .nav-logo {
   display: flex;
   align-items: center;
+  margin-top: 3px;
 }
 
 .nav-logo-img {
@@ -512,6 +513,10 @@ nav {
 @media screen and (min-width: 992px) {
   nav {
     padding: 2rem 0 0 0;
+  }
+
+  .nav-logo {
+    margin-top: 0px;
   }
 
   .nav-logo-img {
